// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@emotion/babel-plugin-jsx-pragmatic css-prop 1`] = `
"import React from 'react'

export default () => <p css={{ backgroundColor: 'hotpink' }}>hello</p>


      ↓ ↓ ↓ ↓ ↓ ↓

import { jsx as ___EmotionJSX } from \\"@emotion/core\\";
import React from 'react';
export default (() => <p css={{
  backgroundColor: 'hotpink'
}}>hello</p>);"
`;

exports[`@emotion/babel-plugin-jsx-pragmatic fragment-only 1`] = `
"import * as React from 'react'

const F = () => <></>


      ↓ ↓ ↓ ↓ ↓ ↓

import * as React from 'react';

const F = () => <></>;"
`;

exports[`@emotion/babel-plugin-jsx-pragmatic minimal 1`] = `
"import * as React from 'react'

const P = () => <p />


      ↓ ↓ ↓ ↓ ↓ ↓

import * as React from 'react';

const P = () => <p />;"
`;
